fwm_excel/excel/k3s/excel-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excel-app
  namespace: excel
spec:
  replicas: 6

  selector:
    matchLabels:
      app: excel-app

  template:
    metadata:
      labels:
        app: excel-app

    spec:
      imagePullSecrets:
        - name: aliyun-registry

      containers:
        - name: excel-app
          image: crpi-glskctb5mzkjyoo7.cn-hangzhou.personal.cr.aliyuncs.com/fhyregistry/excel-app:latest

          ports:
            - containerPort: 8080
