fwm_excel/excel/k3s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: excel

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      imagePullSecrets:
        - name: aliyun-registry

      containers:
        - name: mysql

          image: crpi-glskctb5mzkjyoo7.cn-hangzhou.personal.cr.aliyuncs.com/fhyregistry/mysql:8

          ports:
            - containerPort: 3306
