fwm_excel/excel/k3s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: excel

spec:
  type: NodePort

  selector:
    app: mysql

  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30306
